--- a/app/templates/components/interests/main-container.hbs
+++ b/app/templates/components/interests/main-container.hbs
@@ -6,23 +6,33 @@
     {{interests/reusable/info-card
       infoId="virtualreality"
       infoHeader="Virtual and Augmented Reality"
+      infoImg="logo-vr.jpg"
       isHidden=hiddenState.virtualreality
       expandedResolver=(action "expandedResolver")}}
     {{interests/reusable/info-card
       infoId="machinelearning"
+      infoHeader="Machine Learning"
+      infoImg="logo-ml.jpg"
       isHidden=hiddenState.machinelearning
       expandedResolver=(action "expandedResolver")}}
   </div>
   <div class="row">
     {{interests/reusable/info-card
       infoId="gamedev"
+      infoHeader="Game Development"
+      infoImg="logo-unity-fun.jpg"
       isHidden=hiddenState.gamedev
       expandedResolver=(action "expandedResolver")}}
     {{interests/reusable/info-card
       infoId="python"
+      infoHeader="Programming With Python"
+      infoImg="monty-python.jpg"
       isHidden=hiddenState.python
       expandedResolver=(action "expandedResolver")}}
   </div>
+<div class="col-md-12 card-set-title">
+  <h2>Other Interests</h2>
+</div>
   <div class="row">
     {{interests/reusable/info-card
       infoId="music"
