Create music player content

--- a/app/templates/components/interests/main-container.hbs
+++ b/app/templates/components/interests/main-container.hbs
@@ -34,9 +34,10 @@
   <h2>Other Interests</h2>
 </div>
   <div class="row">
-    {{interests/reusable/info-card
+    {{interests/music-player
       infoId="music"
-      isHidden=hiddenState.music
+      class="music-player"
+      isHIdden=hiddenState.music
       expandedResolver=(action "expandedResolver")}}
     {{interests/reusable/info-card
       infoId="television"
