--- a/app/templates/components/interests/partials/card-content.hbs
+++ b/app/templates/components/interests/partials/card-content.hbs
@@ -15,4 +15,15 @@
     <br><br>Currently I've been playing around with a really cool neural network library called Synaptic.js that runs in node.js and the browser and plays nicely with my JavaScript skills. It gives a good chance to understand how to use machine learning as far as inputs, outputs, and feedback go, but the library probably does about 95% of the heavy lifting for the neural network. That's why I am currently also exploring artificial intelligence on a more theoretical level to understand the deep mathematical and logical complexities that go into the hidden layer of the ANN. I love math and have a pretty good background in science, so the research side of it piques my interest as well.
   {{/if}}
 {{/if}}
-{{yield}}
+{{#if (eq content "gamedev")}}
+  Make what you love!
+  {{#if isExpanded}}
+    One thing I'd like to work on one day is a game, whether professional or for pleasure. To that end, I've been learning development with C# on the Unity platform. Unity is an awesome game engine that has made game development so much more accessible. It's still a work in progress, and so far I've only made a silly little, simple VR game where you can shoot down an incoming bunny invasion, but it's definitely something I'm looking to get better at in the future. Once I get more experience with it, I'll be tackling bigger projects.
+  {{/if}}
+{{/if}}
+{{#if (eq content "python")}}
+  AfricanSwallow.carry({ 'item': 'coconut', 'weight': 1 })
+  {{#if isExpanded}}
+    In order to become a more well-rounded engineer, I wanted to get better at C and Python. Python can be used for so many interesting tasks in web development as well as outside of it as well. I've gotten to mess around with Python and even use some of it at work, and it's definitely been worth the time investment. 
+  {{/if}}
+{{/if}}
