--- a/app/styles/body/interests/_route.scss
+++ b/app/styles/body/interests/_route.scss
@@ -143,4 +143,78 @@
       }
     }
   }
+
+  .music-player {
+    &__nav,
+    &__title {
+      cursor: pointer;
+      float: left;
+      text-align: center;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    &__nav {
+      width: 10%;
+
+      &:hover {
+        color: white;
+      }
+    }
+
+    &__title {
+      width: 79%;
+    }
+
+    &__song-list {
+      margin: 0;
+
+      &__song {
+        text-align: center;
+        padding: 2px 6px;
+      }
+
+      &__button {
+        width: 100%;
+        background-color: $secondary-color;
+        border-radius: 10px;
+        color: white;
+        margin-bottom: 3px;
+        cursor: pointer;
+
+        &:hover {
+          background-color: $secondary-bright-color;
+        }
+      }
+    }
+
+    // Since the music player is using almost the same information as a regular info card,
+    // we can simply overwrite some values to make it more custom to the player itself
+    .info-card__card {
+      &--expanded {
+        .info-card__card {
+          &__picture {
+            &--expanded {
+              width: 45%;
+            }
+          }
+
+          &__details {
+            &--expanded {
+              width: 55%;
+            }
+          } 
+        }
+      }
+
+      &__picture {
+        iframe {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
 }
